; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_repository.c_mkdir_parent.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_repository.c_mkdir_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@S_ISGID = common dso_local global i32 0, align 4
@GIT_MKDIR_PATH = common dso_local global i32 0, align 4
@GIT_MKDIR_VERIFY_DIR = common dso_local global i32 0, align 4
@GIT_MKDIR_SKIP_LAST2 = common dso_local global i32 0, align 4
@GIT_MKDIR_SKIP_LAST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i32)* @mkdir_parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mkdir_parent(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @S_ISGID, align 4
  %12 = or i32 %11, 2
  %13 = xor i32 %12, -1
  %14 = and i32 %10, %13
  %15 = load i32, i32* @GIT_MKDIR_PATH, align 4
  %16 = load i32, i32* @GIT_MKDIR_VERIFY_DIR, align 4
  %17 = or i32 %15, %16
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = load i32, i32* @GIT_MKDIR_SKIP_LAST2, align 4
  br label %24

22:                                               ; preds = %3
  %23 = load i32, i32* @GIT_MKDIR_SKIP_LAST, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = phi i32 [ %21, %20 ], [ %23, %22 ]
  %26 = or i32 %17, %25
  %27 = call i32 @git_futils_mkdir(i32 %9, i32 %14, i32 %26)
  ret i32 %27
}

declare dso_local i32 @git_futils_mkdir(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
